--- a/styles/style.css
+++ b/styles/style.css
@@ -64,12 +64,16 @@ main {
 
 /* start main-section styles */
 .main-section {
+  width: 100%;
+  height: 100%;
   margin: 0 0.5rem;
+  /* overflow: auto; */
 }
 .main-section--with-nav {
   width: 70%;
 }
-.main-section__content-paragraph {
+.main-section__content-paragraph,
+.main-section__content-list {
   margin: auto 1rem;
   line-height: 1.8;
 }
