--- a/styles/style.css
+++ b/styles/style.css
@@ -32,8 +32,7 @@ main {
 
 /* start sidebar styles */
 .sidebar {
-  height: 100%;
-  width: 30%;
+  width: 35%;
   transition: transform 0.3s ease;
   background-color: var(--nav-background-color);
   color: var(--nav-font-color);
@@ -46,7 +45,9 @@ main {
 }
 
 .sidebar--active {
-  position: relative;
+  position: sticky;
+  top: 0;
+  bottom: 0;
   transform: translate(0, 0);
 }
 .sidebar__list {
@@ -60,18 +61,46 @@ main {
 .sidebar__list-item--active {
   background-color: var(--nav-item-active);
 }
+
+@media screen and (min-width: 640px) {
+  .sidebar {
+    width: 30%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .sidebar {
+    width: 25%;
+  }
+  .sidebar--inactive {
+    position: relative;
+    transform: translate(0, 0);
+  }
+}
 /* end sidebar styles */
 
 /* start main-section styles */
 .main-section {
   width: 100%;
-  height: 100%;
   margin: 0 0.5rem;
   /* overflow: auto; */
 }
-.main-section--with-nav {
-  width: 70%;
+
+@media screen and (min-width: 1024px) {
+  .main-section {
+    width: 75%;
+  }
 }
+.main-section--with-nav {
+  width: 75%;
+}
+
+@media screen and (min-width: 640px) {
+  .main-section--with-nav {
+    width: 70%;
+  }
+}
+
 .main-section__content-paragraph,
 .main-section__content-list {
   margin: auto 1rem;
@@ -93,6 +122,17 @@ main {
   font-size: 1.5rem;
   transition: transform 0.3s ease;
 }
+
+@media screen and (min-width: 1024px) {
+  .main-section__header {
+    justify-content: flex-end;
+  }
+
+  .main-section__sidebar-menu-icon {
+    display: none;
+  }
+}
+
 .main-section__sidebar-menu-icon {
   transform: rotate(0);
 }
@@ -110,22 +150,40 @@ main {
 .main-section__content-banner-image {
   max-width: 100%;
 }
+
+@media screen and (min-width: 640px) {
+  .main-section__content-banner-image {
+    display: block;
+    margin: auto;
+    max-width: 75%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .main-section__content-banner-image {
+    max-width: 65%;
+  }
+}
+
 /* end main-section content styles */
 
 /* start main section content article styles */
 .main-section__content-article {
-  transition: transform 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .main-section__content-article--active {
   transform: translate(0, 0);
-  position: relative;
+  /* position: relative; */
+  display: block;
 }
 
 .main-section__content-article--inactive {
+  display: none;
   /* TODO: add vendor prefix */
   position: absolute;
   transform: translate(150%, 0);
+
 }
 /* end main section content article styles */
 
