cleanup/fix according to validator

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,57 +1,58 @@
-:root {
-  --global-font-size: 15px;
-  --global-max-width: 100%;
-  --global-margin: auto 1rem;
-  --global-font-family: "Open Sans", sans-serif;
-  --nav-background-color: #2c3e50;
-  --nav-font-color: #fff;
-  --nav-item-active: #3498db;
-  --featured-work-header-color: gray;
-  --main-section-header-border-bottom: 2px solid #95a5a6;
-  --footer-border-top: 2px solid #95a5a6;
-}
-
 body {
   height: 100%;
   width: 100%;
   overflow-x: hidden;
+  color: #2d3c49;
 }
 
-/* start sidebar styles */
+/* start customize h2 */
+h2 {
+  color: #7d97ad;
+}
+/* end customize h2 */
 
+/* start sidebar styles */
 .sidebar {
   transition: all 0.4s ease;
-  background-color: var(--nav-background-color);
-  padding-left: 0;
-  padding-right: 0;
+  background-color: #2d3c49;
+  padding: 0;
 }
 
 .sidebar--inactive {
   opacity: 0;
+  -webkit-transform: translate(0, -200%);
+  -moz-transform: translate(0, -200%);
+  -ms-transform: translate(0, -200%);
+  -o-transform: translate(0, -200%);
   transform: translate(0, -200%);
   position: absolute;
 }
 
 @media screen and (min-width: 640px) {
   .sidebar--inactive {
+    -webkit-transform: translate(0, 0);
+    -moz-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
+    -o-transform: translate(0, 0);
     transform: translate(0, 0);
-    position: sticky;
-    top: 0;
-    bottom: 0;
+    position: relative;
     opacity: 1;
   }
 }
 
 .sidebar--active {
-  /* TODO: add vendor prefix */
+  -webkit-transform: translate(0, 0);
+  -moz-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  -o-transform: translate(0, 0);
   transform: translate(0, 0);
   position: relative;
   opacity: 1;
 }
 
 .sidebar__list-item {
-  background-color: var(--nav-background-color);
-  color: var(--nav-font-color);
+  background-color: #2d3c49;
+  color: #fff;
   padding: 1rem 0 1rem 0.5rem;
   border: none;
 }
@@ -63,18 +64,8 @@ body {
 }
 
 .sidebar__list-item--active {
-  background-color: var(--nav-item-active);
+  background-color: #02b3e4;
 }
-
-@media screen and (min-width: 1024px) {
-  .sidebar--inactive {
-    position: sticky;
-    top: 0;
-    bottom: 0;
-    transform: translate(0, 0);
-  }
-}
-
 /* end sidebar styles */
 
 /* start main-section styles */
@@ -121,13 +112,11 @@ body {
 .main-section__content-my-education-list > li:before {
   content: "\f19c";
 }
-
 /* end main-section styles */
 
 /* start header styles */
-
 header {
-  border-bottom: var(--main-section-header-border-bottom);
+  border-bottom: 2px solid #95a5a6;
   padding-bottom: 0.5rem;
 }
 
@@ -137,7 +126,7 @@ header {
   align-self: center;
 }
 
-.header__profile-pic-wrapper{
+.header__profile-pic-wrapper {
   align-self: center;
 }
 
@@ -148,7 +137,10 @@ header {
 .header__menu-icon {
   align-self: center;
   font-size: 1.5rem;
-  transition: transform 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 @media screen and (min-width: 640px) {
@@ -166,14 +158,15 @@ header {
   font-family: FontAwesome;
   content: "\f00d";
 }
-
 /* end header styles */
 
 /* start main-section content styles */
-
 .main-section__content {
   margin-top: 0.5rem;
-  transition: transform 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .main-section__content-banner-image {
@@ -190,24 +183,32 @@ header {
 /* end main-section content styles */
 
 /* start main section content article styles */
-
 .main-section__content-article {
-  transition: transform 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .main-section__content-article--active {
+  -webkit-transform: translate(0, 0);
+  -moz-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  -o-transform: translate(0, 0);
   transform: translate(0, 0);
 }
 
 .main-section__content-article--inactive {
   position: absolute;
+  -webkit-transform: translate(200%, 0);
+  -moz-transform: translate(200%, 0);
+  -ms-transform: translate(200%, 0);
+  -o-transform: translate(200%, 0);
   transform: translate(200%, 0);
 }
-
 /* end main section content article styles */
 
 /* start Footer styles */
-
 footer {
   text-align: center;
 }
@@ -215,7 +216,6 @@ footer {
 .footer__paragraph {
   margin: 0.5rem 0;
   padding: 1rem 0;
-  border-top: var(--footer-border-top);
+  border-top: 2px solid #95a5a6;
 }
-
 /* end Footer styles */
